bloodc/src/parser/snapshots/bloodc__parser__tests__const_generic_expr.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Const(
                                ConstParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 11,
                                            end: 12,
                                            start_line: 1,
                                            start_col: 12,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 14,
                                                                end: 19,
                                                                start_line: 1,
                                                                start_col: 15,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 14,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 15,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 14,
                                            end: 19,
                                            start_line: 1,
                                            start_col: 15,
                                        },
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 19,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 4,
                            end: 20,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                ),
                params: [],
                return_type: Some(
                    Type {
                        kind: Array {
                            element: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 4,
                                                    },
                                                    span: Span {
                                                        start: 27,
                                                        end: 30,
                                                        start_line: 1,
                                                        start_col: 28,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 27,
                                            end: 30,
                                            start_line: 1,
                                            start_col: 28,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 27,
                                    end: 30,
                                    start_line: 1,
                                    start_col: 28,
                                },
                            },
                            size: Expr {
                                kind: Path(
                                    ExprPath {
                                        segments: [
                                            ExprPathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 2,
                                                    },
                                                    span: Span {
                                                        start: 32,
                                                        end: 33,
                                                        start_line: 1,
                                                        start_col: 33,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 32,
                                            end: 33,
                                            start_line: 1,
                                            start_col: 33,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 32,
                                    end: 33,
                                    start_line: 1,
                                    start_col: 33,
                                },
                            },
                        },
                        span: Span {
                            start: 26,
                            end: 34,
                            start_line: 1,
                            start_col: 27,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Array(
                                    Repeat {
                                        value: Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: Int {
                                                        value: 0,
                                                        suffix: None,
                                                    },
                                                    span: Span {
                                                        start: 38,
                                                        end: 39,
                                                        start_line: 1,
                                                        start_col: 39,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 38,
                                                end: 39,
                                                start_line: 1,
                                                start_col: 39,
                                            },
                                        },
                                        count: Expr {
                                            kind: Path(
                                                ExprPath {
                                                    segments: [
                                                        ExprPathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 2,
                                                                },
                                                                span: Span {
                                                                    start: 41,
                                                                    end: 42,
                                                                    start_line: 1,
                                                                    start_col: 42,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 41,
                                                        end: 42,
                                                        start_line: 1,
                                                        start_col: 42,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 41,
                                                end: 42,
                                                start_line: 1,
                                                start_col: 42,
                                            },
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 37,
                                    end: 43,
                                    start_line: 1,
                                    start_col: 38,
                                },
                            },
                        ),
                        span: Span {
                            start: 35,
                            end: 45,
                            start_line: 1,
                            start_col: 36,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 45,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
