bloodc/src/parser/snapshots/bloodc__parser__tests__edge_deep_nesting_parens.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Paren(
                                    Expr {
                                        kind: Paren(
                                            Expr {
                                                kind: Paren(
                                                    Expr {
                                                        kind: Paren(
                                                            Expr {
                                                                kind: Paren(
                                                                    Expr {
                                                                        kind: Paren(
                                                                            Expr {
                                                                                kind: Paren(
                                                                                    Expr {
                                                                                        kind: Path(
                                                                                            ExprPath {
                                                                                                segments: [
                                                                                                    ExprPathSegment {
                                                                                                        name: Spanned {
                                                                                                            node: SymbolU32 {
                                                                                                                value: 2,
                                                                                                            },
                                                                                                            span: Span {
                                                                                                                start: 16,
                                                                                                                end: 17,
                                                                                                                start_line: 1,
                                                                                                                start_col: 17,
                                                                                                            },
                                                                                                        },
                                                                                                        args: None,
                                                                                                    },
                                                                                                ],
                                                                                                span: Span {
                                                                                                    start: 16,
                                                                                                    end: 17,
                                                                                                    start_line: 1,
                                                                                                    start_col: 17,
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                        span: Span {
                                                                                            start: 16,
                                                                                            end: 17,
                                                                                            start_line: 1,
                                                                                            start_col: 17,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                span: Span {
                                                                                    start: 15,
                                                                                    end: 18,
                                                                                    start_line: 1,
                                                                                    start_col: 16,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 14,
                                                                            end: 19,
                                                                            start_line: 1,
                                                                            start_col: 15,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 20,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 12,
                                                            end: 21,
                                                            start_line: 1,
                                                            start_col: 13,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 11,
                                                    end: 22,
                                                    start_line: 1,
                                                    start_col: 12,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 10,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 11,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 24,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 26,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 26,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 26,
        start_line: 1,
        start_col: 1,
    },
}
