bloodc/src/parser/snapshots/bloodc__parser__tests__edge_generic_in_expr_position.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `;`, found `::`", span: Span { start: 27, end: 29, start_line: 1, start_col: 28 }, labels: [], suggestions: [], source_file: None, source_content: None }]
