bloodc/src/parser/snapshots/bloodc__parser__tests__edge_index_chain.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Index {
                                    base: Expr {
                                        kind: Index {
                                            base: Expr {
                                                kind: Index {
                                                    base: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 9,
                                                                                end: 12,
                                                                                start_line: 1,
                                                                                start_col: 10,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 12,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 9,
                                                            end: 12,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    index: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 0,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 14,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 13,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 14,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 15,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            index: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 16,
                                                            end: 17,
                                                            start_line: 1,
                                                            start_col: 17,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 16,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    index: Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 2,
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 19,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 19,
                                            end: 20,
                                            start_line: 1,
                                            start_col: 20,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 21,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 23,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 23,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 23,
        start_line: 1,
        start_col: 1,
    },
}
